--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,3 +9,4 @@ export(ds.GetObjectInfo)
 export(ds.GetValidationReport_AugmentedData)
 export(ds.GetValidationReport_CuratedData)
 export(ds.GetValidationReport_RawData)
+export(ds.UpdateCCPhos)
