--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,4 +9,5 @@ export(ds.GetObjectInfo)
 export(ds.GetValidationReport_AugmentedData)
 export(ds.GetValidationReport_CuratedData)
 export(ds.GetValidationReport_RawData)
+export(ds.UnpackAugmentedDataSet)
 export(ds.UnpackCuratedDataSet)
