Implemented first data aggregateion and visualization functions

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,11 @@
 Package: dsCCPhosClient
 Title: Enabling Data Science with the DKTK-CCP
-Version: 0.1.12
+Version: 0.1.14
 Authors@R: 
     person("Bastian", "Reiter", , "b.reiter@med.uni-frankfurt.de", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-1088-0502"))
 Description: Client-side dataSHIELD R package to enable Data Science with the German Cancer Consortium's Clinical Communication Platform (CCP)
+URL: https://ccphos.netlify.app/, https://github.com/BastianReiter/dsCCPhosClient
 License: CC BY 4.0
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
@@ -13,3 +14,10 @@ Imports:
     dplyr,
     DSI,
     tibble
+Suggests: 
+    ggplot2,
+    scales,
+    sysfonts
+Depends: 
+    R (>= 2.10)
+LazyData: true
