Working Box plot function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,3 +14,4 @@ export(ds.GetValidationReport_RawData)
 export(ds.UnpackAugmentedDataSet)
 export(ds.UnpackCuratedDataSet)
 export(ggTheme_CCP)
+export(gtTheme_CCP)
