--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,8 +17,11 @@ Imports:
 Suggests: 
     ggplot2,
     gt,
+    quarto,
+    rmarkdown,
     scales,
-    sysfonts
+    sysfonts,
+    utils
 Depends: 
     R (>= 2.10)
 LazyData: true
