--- a/Development/Reporting/Quarto Website/_quarto.yml
+++ b/Development/Reporting/Quarto Website/_quarto.yml
@@ -1,10 +1,10 @@
 project:
   type: book
-  pre-render: SETUP.R
+  pre-render: RSetup.R
 
 book:
-  title: "Analysis Report"
-  subtitle: "Frankfurt"
+  title: "dsCCPhos: Data curation report"
+  subtitle: "Data transformation"
   author: "Bastian Reiter"
   date: last-modified
   search: true
@@ -26,7 +26,7 @@ book:
       openSidebar: false
 
 format:
-  
+
   html:
     code-link: true
     code-fold: true
@@ -38,7 +38,7 @@ format:
       - cosmo
       - theme.scss
     reference-location: margin
-      
+
 
 editor: source
 
