--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,11 +10,12 @@ License: CC BY 4.0
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
-Imports: 
+Imports:
     dplyr,
     DSI,
     tibble
 Suggests: 
+    CCPhosApp (>= 0.1.1),
     ggplot2,
     gt,
     quarto,
@@ -25,3 +26,5 @@ Suggests:
 Depends: 
     R (>= 2.10)
 LazyData: true
+Remotes:  
+    devtools::BastianReiter/CCPhosApp
