Implemented Raw data loading function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(CheckServerRequirements)
 export(ConnectToCCP)
 export(ConnectToVirtualCCP)
 export(ExportPlot)
+export(LoadRawDataSet)
 export(MakeBoxPlot)
 export(MakeColumnPlot)
 export(MakeCurationReport)
