Implemented curation report summary and more restructuring

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,8 +10,10 @@ export(MakeColumnPlot)
 export(MakeCurationReport)
 export(ds.AugmentData)
 export(ds.CurateData)
+export(ds.ExtractFromList)
 export(ds.GetCurationReport)
 export(ds.GetObjectInfo)
+export(ds.GetReportingObject)
 export(ds.GetSampleStatistics)
 export(ds.GetValidationReport_AugmentedData)
 export(ds.GetValidationReport_CuratedData)
