--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: dsCCPhosClient
 Title: Enabling Data Science with the DKTK-CCP
-Version: 0.1.16
+Version: 0.1.17
 Authors@R: 
     person("Bastian", "Reiter", , "b.reiter@med.uni-frankfurt.de", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-1088-0502"))
@@ -13,7 +13,8 @@ RoxygenNote: 7.2.3
 Imports:
     dplyr,
     DSI,
-    tibble
+    tibble,
+    tidyr
 Suggests: 
     CCPhosApp (>= 0.1.1),
     ggplot2,
