--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ export(LoadRawDataSet)
 export(MakeBoxPlot)
 export(MakeColumnPlot)
 export(MakeCurationReport)
+export(MakeFunctionMessage)
+export(PrintMessages)
 export(ds.AugmentData)
 export(ds.CurateData)
 export(ds.ExtractFromList)
