--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: dsCCPhosClient
 Title: Enabling Data Science with the DKTK-CCP
-Version: 0.1.17
+Version: 0.1.18
 Authors@R: 
     person("Bastian", "Reiter", , "b.reiter@med.uni-frankfurt.de", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-1088-0502"))
@@ -11,12 +11,15 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Imports:
+    cli,
     dplyr,
+    dsBaseClient (>= 6.3.0),
     DSI,
     tibble,
     tidyr
 Suggests: 
     CCPhosApp (>= 0.1.1),
+    DSLite,
     ggplot2,
     gt,
     quarto,
@@ -27,5 +30,6 @@ Suggests:
 Depends: 
     R (>= 2.10)
 LazyData: true
-Remotes:  
-    devtools::BastianReiter/CCPhosApp
+Remotes: 
+    devtools::BastianReiter/CCPhosApp,
+    devtools::datashield/dsBaseClient
