--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(CheckServerRequirements)
 export(ConnectToCCP)
 export(ConnectToVirtualCCP)
 export(ExportPlot)
+export(GetServerWorkspaceInfo)
 export(LoadRawDataSet)
 export(MakeBoxPlot)
 export(MakeColumnPlot)
