Implemented further functionality concerning server session object monitoring and transformation monitoring

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,7 +16,8 @@ export(ds.AugmentData)
 export(ds.CurateData)
 export(ds.ExtractFromList)
 export(ds.GetCurationReport)
-export(ds.GetObjectInfo)
+export(ds.GetObjectMetaData)
+export(ds.GetObjectStatus)
 export(ds.GetReportingObject)
 export(ds.GetSampleStatistics)
 export(ds.GetValidationReport_AugmentedData)
