--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(CheckServerRequirements)
 export(ConnectToCCP)
 export(ConnectToVirtualCCP)
+export(ExploreFeature)
 export(ExportPlot)
 export(GetServerOpalInfo)
 export(GetServerWorkspaceInfo)
@@ -16,6 +17,8 @@ export(ds.AugmentData)
 export(ds.CurateData)
 export(ds.ExtractFromList)
 export(ds.GetCurationReport)
+export(ds.GetFeatureInfo)
+export(ds.GetFrequencyTable)
 export(ds.GetObjectMetaData)
 export(ds.GetObjectStatus)
 export(ds.GetReportingObject)
