--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(ConnectToCCP)
 export(ConnectToVirtualCCP)
 export(ExploreFeature)
 export(ExportPlot)
+export(GetServerCheckpoints)
 export(GetServerOpalInfo)
 export(GetServerWorkspaceInfo)
 export(LoadRawDataSet)
@@ -14,6 +15,7 @@ export(MakeCurationReport)
 export(MakeFunctionMessage)
 export(PrintMessages)
 export(ds.AugmentData)
+export(ds.CreateCheckpoints)
 export(ds.CurateData)
 export(ds.ExtractFromList)
 export(ds.GetCurationReport)
@@ -21,11 +23,12 @@ export(ds.GetFeatureInfo)
 export(ds.GetFrequencyTable)
 export(ds.GetObjectMetaData)
 export(ds.GetObjectStatus)
+export(ds.GetRDSTableCheck)
+export(ds.GetRDSValidationReport)
 export(ds.GetReportingObject)
 export(ds.GetSampleStatistics)
 export(ds.GetValidationReport_AugmentedData)
 export(ds.GetValidationReport_CuratedData)
-export(ds.GetValidationReport_RawData)
 export(ds.UnpackAugmentedDataSet)
 export(ds.UnpackCuratedDataSet)
 export(ggTheme_CCP)
