--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,6 @@ export(ConnectToCCP)
 export(ConnectToVirtualCCP)
 export(ExploreFeature)
 export(ExportPlot)
-export(GetServerCheckpoints)
 export(GetServerOpalInfo)
 export(GetServerWorkspaceInfo)
 export(LoadRawDataSet)
@@ -15,7 +14,7 @@ export(MakeCurationReport)
 export(MakeFunctionMessage)
 export(PrintMessages)
 export(ds.AugmentData)
-export(ds.CreateCheckpoints)
+export(ds.CheckRDSTables)
 export(ds.CurateData)
 export(ds.ExtractFromList)
 export(ds.GetCurationReport)
@@ -23,7 +22,6 @@ export(ds.GetFeatureInfo)
 export(ds.GetFrequencyTable)
 export(ds.GetObjectMetaData)
 export(ds.GetObjectStatus)
-export(ds.GetRDSTableCheck)
 export(ds.GetRDSValidationReport)
 export(ds.GetReportingObject)
 export(ds.GetSampleStatistics)
