--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(MakeBoxPlot)
 export(MakeColumnPlot)
 export(MakeCurationReport)
 export(MakeFunctionMessage)
+export(ModifyConnections)
 export(PrintMessages)
 export(ds.AugmentData)
 export(ds.CheckRDSTables)
