--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,3 +33,4 @@ export(ds.UnpackAugmentedDataSet)
 export(ds.UnpackCuratedDataSet)
 export(ggTheme_CCP)
 export(gtTheme_CCP)
+export(ds.ADS_Postprocess)
