--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,6 +16,7 @@ Imports:
     dsBaseClient (>= 6.3.0),
     dsCCPhos (>= 0.1.31),
     DSI,
+    purrr,
     tibble,
     tidyr
 Suggests: 
@@ -31,7 +32,7 @@ Suggests:
 Depends: 
     R (>= 2.10)
 LazyData: true
-Remotes:  
+Remotes: 
     BastianReiter/CCPhosApp,
     BastianReiter/dsCCPhos,
     datashield/dsBaseClient
