Ver 0.1.41: Added sample drawing function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(PrintMessages)
 export(ds.AugmentData)
 export(ds.CheckRDSTables)
 export(ds.CurateData)
+export(ds.DrawSample)
 export(ds.ExtractFromList)
 export(ds.GetCurationReport)
 export(ds.GetFeatureInfo)
