--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: dsCCPhosClient
 Title: Enabling Data Science with the DKTK-CCP
-Version: 0.1.45
+Version: 0.1.46
 Authors@R: 
     person("Bastian", "Reiter", , "b.reiter@med.uni-frankfurt.de", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-1088-0502"))
@@ -16,6 +16,8 @@ Imports:
     dsBaseClient (>= 6.3.0),
     dsCCPhos (>= 0.1.44),
     DSI,
+    DSOpal,
+    httr,
     purrr,
     tibble,
     tidyr
