Further ds.GetSurvModel()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(ds.GetObjectStatus)
 export(ds.GetRDSValidationReport)
 export(ds.GetReportingObject)
 export(ds.GetSampleStatistics)
+export(ds.GetSurvModel)
 export(ds.GetValidationReport_AugmentedData)
 export(ds.GetValidationReport_CuratedData)
 export(ds.UnpackAugmentedDataSet)
