--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(ds.GetSampleStatistics)
 export(ds.GetTTEModel)
 export(ds.GetValidationReport_AugmentedData)
 export(ds.GetValidationReport_CuratedData)
+export(ds.JoinTables)
 export(ds.UnpackAugmentedDataSet)
 export(ds.UnpackCuratedDataSet)
 export(ggTheme_CCP)
