Ver. 0.1.76: Worked on ds.CheckDataSet()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,7 +15,7 @@ export(MakeFunctionMessage)
 export(ModifyConnections)
 export(PrintMessages)
 export(ds.AugmentData)
-export(ds.CheckRDSTables)
+export(ds.CheckDataSet)
 export(ds.CurateData)
 export(ds.DrawSample)
 export(ds.ExtractFromList)
