--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(CheckServerRequirements)
 export(ConnectToCCP)
 export(ConnectToVirtualCCP)
+export(DisplayTimeSeries)
 export(ExploreFeature)
 export(ExportPlot)
 export(GetServerOpalInfo)
@@ -19,6 +20,7 @@ export(ds.CheckDataSet)
 export(ds.CurateData)
 export(ds.DrawSample)
 export(ds.ExtractFromList)
+export(ds.GetCohortDescription)
 export(ds.GetCurationReport)
 export(ds.GetFeatureInfo)
 export(ds.GetFrequencyTable)
