--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: dsCCPhosClient
 Title: Enabling Data Science with the DKTK-CCP
-Version: 0.1.79
+Version: 0.1.80
 Authors@R: 
     person("Bastian", "Reiter", , "b.reiter@med.uni-frankfurt.de", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-1088-0502"))
@@ -14,7 +14,6 @@ Imports:
     cli,
     dplyr,
     dsBaseClient (>= 6.3.0),
-    dsTidyverse,
     dsTidyverseClient,
     DSI,
     DSOpal,
@@ -24,6 +23,9 @@ Imports:
     tidyr
 Suggests: 
     CCPhosApp (>= 0.1.1),
+    dsBase,
+    dsCCPhos,
+    dsTidyverse,
     DSLite,
     ggplot2,
     gt,
@@ -37,4 +39,5 @@ Depends:
 LazyData: true
 Remotes: 
     BastianReiter/CCPhosApp,
-    datashield/dsBaseClient
+    datashield/dsBaseClient,
+    BastianReiter/dsCCPhos,
