Ver 0.1.81: Major update of server package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(ConnectToVirtualCCP)
 export(DisplayTimeSeries)
 export(ExploreFeature)
 export(ExportPlot)
+export(GetEligibleValues)
 export(GetServerOpalInfo)
 export(GetServerWorkspaceInfo)
 export(LoadRawDataSet)
