Ver 0.1.82: Implemented extended filter function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,11 +17,13 @@ export(MakeCurationReport)
 export(MakeFunctionMessage)
 export(ModifyConnections)
 export(PrintMessages)
+export(UpdateLocalPackages)
 export(ds.AugmentData)
 export(ds.CheckDataSet)
 export(ds.CurateData)
 export(ds.DrawSample)
 export(ds.ExtractFromList)
+export(ds.FilterTable)
 export(ds.GetCohortDescription)
 export(ds.GetCurationReport)
 export(ds.GetFeatureInfo)
