--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(MakeCurationReport)
 export(MakeFunctionMessage)
 export(ModifyConnections)
 export(PrintMessages)
+export(PrintSoloMessage)
 export(UpdateLocalPackages)
 export(ds.AugmentData)
 export(ds.CheckDataSet)
