Ver 0.1.84: Re-implementation of ServerWorkspaceInfo

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,13 +20,13 @@ export(PrintMessages)
 export(PrintSoloMessage)
 export(UpdateLocalPackages)
 export(ds.AugmentData)
-export(ds.CheckDataSet)
 export(ds.CurateData)
 export(ds.DrawSample)
 export(ds.ExtractFromList)
 export(ds.FilterTable)
 export(ds.GetCohortDescription)
 export(ds.GetCurationReport)
+export(ds.GetDataSetCheck)
 export(ds.GetFeatureInfo)
 export(ds.GetFrequencyTable)
 export(ds.GetObjectMetaData)
@@ -35,6 +35,7 @@ export(ds.GetRDSValidationReport)
 export(ds.GetReportingObject)
 export(ds.GetSampleStatistics)
 export(ds.GetTTEModel)
+export(ds.GetTableCheck)
 export(ds.JoinTables)
 export(ds.UnpackAugmentedDataSet)
 export(ds.UnpackCuratedDataSet)
