--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: dsCCPhosClient
 Title: Enabling Data Science with the DKTK-CCP
-Version: 0.1.84
+Version: 0.1.85
 Authors@R: 
     person("Bastian", "Reiter", , "b.reiter@med.uni-frankfurt.de", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-1088-0502"))
@@ -20,7 +20,8 @@ Imports:
     httr,
     purrr,
     tibble,
-    tidyr
+    tidyr,
+    assertthat
 Suggests: 
     CCPhosApp (>= 0.1.1),
     dsBase,
