Bug fix in GetServerWorkspaceInfo()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(MakeFunctionMessage)
 export(ModifyConnections)
 export(PrintMessages)
 export(PrintSoloMessage)
+export(QuickProcessingRun)
 export(UpdateLocalPackages)
 export(ds.AugmentData)
 export(ds.CurateData)
