--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: dsCCPhosClient
 Title: Enabling Data Science with the DKTK-CCP
-Version: 0.2.00
+Version: 0.2.03
 Authors@R: 
     person("Bastian", "Reiter", , "b.reiter@med.uni-frankfurt.de", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-1088-0502"))
@@ -15,6 +15,7 @@ Imports:
     cli,
     dplyr,
     dsBaseClient (>= 6.3.0),
+    dsFredaClient,
     dsTidyverseClient,
     DSI,
     DSOpal,
@@ -43,3 +44,4 @@ Remotes:
     BastianReiter/CCPhosApp,
     datashield/dsBaseClient,
     BastianReiter/dsCCPhos,
+    BastianReiter/dsFredaClient
