--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: dsCCPhosClient
 Title: Enabling Data Science with the DKTK-CCP
-Version: 0.2.04
+Version: 0.2.08
 Authors@R: 
     person("Bastian", "Reiter", , "b.reiter@med.uni-frankfurt.de", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-1088-0502"))
@@ -11,14 +11,33 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Imports:
-    dsCCPhos,
-    dsFredaClient
+    assertthat,
+    cli,
+    dplyr,
+    dsBaseClient (>= 6.3.1),
+    dsFredaClient,
+    DSI,
+    magrittr,
+    purrr,
+    tibble,
+    tidyr
 Suggests:
-    CCPhosApp
+    CCPhosApp,
+    dsCCPhos,
+    DSLite,
+    dsTidyverse,
+    dsTidyverseClient,
+    ggplot2,
+    gt,
+    quarto,
+    scales,
+    sysfonts,
+    utils
 Depends: 
     R (>= 4.3.0)
 LazyData: true
 Remotes: 
     BastianReiter/CCPhosApp,
     BastianReiter/dsCCPhos,
-    BastianReiter/dsFredaClient
+    BastianReiter/dsFredaClient,
+    datashield/dsBaseClient
