--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ importFrom(dsFredaClient,GetServerWorkspaceInfo)
 importFrom(dsFredaClient,MakeBoxPlot)
 importFrom(dsFredaClient,MakeColumnPlot)
 importFrom(dsFredaClient,MakeFunctionMessage)
+importFrom(dsFredaClient,PrintMessages)
 importFrom(dsFredaClient,ds.ExtractFromList)
 importFrom(dsFredaClient,ds.FilterTable)
 importFrom(dsFredaClient,ds.GetCrossTab)
