--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: dsCCPhosClient
 Title: Enabling Data Science with the DKTK-CCP
-Version: 0.2.08
+Version: 0.2.09
 Authors@R: 
     person("Bastian", "Reiter", , "b.reiter@med.uni-frankfurt.de", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-1088-0502"))
@@ -14,7 +14,7 @@ Imports:
     assertthat,
     cli,
     dplyr,
-    dsBaseClient (>= 6.3.1),
+    dsBaseClient,
     dsFredaClient,
     DSI,
     magrittr,
@@ -23,6 +23,7 @@ Imports:
     tidyr
 Suggests:
     CCPhosApp,
+    dsBase,
     dsCCPhos,
     DSLite,
     dsTidyverse,
@@ -40,4 +41,5 @@ Remotes:
     BastianReiter/CCPhosApp,
     BastianReiter/dsCCPhos,
     BastianReiter/dsFredaClient,
+    datashield/dsBase,
     datashield/dsBaseClient
