Ver 0.2.14: Improved LoadRawDataSet() and update in dsFredaClient

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,8 @@ export(DisplayTimeSeries)
 export(ExploreFeature)
 export(ExportPlot)
 export(GetEligibleValues)
-export(GetServerOpalInfo)
+export(GetServerOpalDBInfo)
+export(GetServerResourcesInfo)
 export(GetServerWorkspaceInfo)
 export(LoadRawDataSet)
 export(MakeBoxPlot)
@@ -48,7 +49,8 @@ importFrom(dsFredaClient,DisplayTimeSeries)
 importFrom(dsFredaClient,ExploreFeature)
 importFrom(dsFredaClient,ExportPlot)
 importFrom(dsFredaClient,GetEligibleValues)
-importFrom(dsFredaClient,GetServerOpalInfo)
+importFrom(dsFredaClient,GetServerOpalDBInfo)
+importFrom(dsFredaClient,GetServerResourcesInfo)
 importFrom(dsFredaClient,GetServerWorkspaceInfo)
 importFrom(dsFredaClient,MakeBoxPlot)
 importFrom(dsFredaClient,MakeColumnPlot)
