--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(DisplayTimeSeries)
 export(ExploreFeature)
 export(ExportPlot)
 export(GetEligibleValues)
+export(GetExplorationData)
 export(GetServerOpalDBInfo)
 export(GetServerResourcesInfo)
 export(GetServerWorkspaceInfo)
@@ -34,6 +35,7 @@ export(ds.GetTableCheck)
 export(ds.JoinTables)
 export(ds.MakeList)
 export(ds.MutateTable)
+export(ds.PrepareRawData)
 export(ds.UnpackAugmentedDataSet)
 export(ds.UnpackCuratedDataSet)
 export(ggTheme)
@@ -49,6 +51,7 @@ importFrom(dsFredaClient,DisplayTimeSeries)
 importFrom(dsFredaClient,ExploreFeature)
 importFrom(dsFredaClient,ExportPlot)
 importFrom(dsFredaClient,GetEligibleValues)
+importFrom(dsFredaClient,GetExplorationData)
 importFrom(dsFredaClient,GetServerOpalDBInfo)
 importFrom(dsFredaClient,GetServerResourcesInfo)
 importFrom(dsFredaClient,GetServerWorkspaceInfo)
@@ -71,6 +74,7 @@ importFrom(dsFredaClient,ds.GetTableCheck)
 importFrom(dsFredaClient,ds.JoinTables)
 importFrom(dsFredaClient,ds.MakeList)
 importFrom(dsFredaClient,ds.MutateTable)
+importFrom(dsFredaClient,ds.PrepareRawData)
 importFrom(dsFredaClient,ggTheme)
 importFrom(dsFredaClient,gtTheme)
 importFrom(magrittr,"%>%")
