Update meta data and started working on DisplayCrossTable()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(CheckServerRequirements)
 export(ConnectToCCP)
 export(ConnectToVirtualCCP)
+export(DisplayCrossTable)
 export(DisplayTimeSeries)
 export(ExploreFeature)
 export(ExportPlot)
